src/App.scss
main {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-image: url('./images/backgroundDarkWatercolor.jpg');
  background-size: cover;

  display: flex;

  .start-btn {
    color: white;
    text-shadow: 0 0 1px black;
    font-size: 5rem;
    width: 100%;
    border: none;
    background: transparent;
    cursor: pointer;
  }

  svg {
    flex: 1 1;

    .porcupine {
      fill: darkgray;
      mix-blend-mode: color-dodge;
    }

    .flower {
      fill: #444;
      mix-blend-mode: color-dodge;
    }
  }

  .controls {
    position: absolute;
    top: 0;
    right: 0;
  }
}

